# rust-http-starter

./: Cargo.toml  Dockerfile  Dockerfile-dev  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  ci_terraform.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs
src/handlers/: metrics.rs  mod.rs
terraform/: main.tf  variables.tf
terraform/ecs/: main.tf  variables.tf
tests/context/: server.rs
