[package]
name = "rust-http-starter"
version = "0.1.0"
edition = "2021"
authors = [
    "Harry Bairstow <harry@walletconnect.com>"
]
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
hyper = "0.14"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "macros"] }

# Seralisation
serde = { version = "1.0", features = ["derive"] }

# Env Vars
dotenv = "0.15"
envy = "0.4"

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.11"
opentelemetry-otlp = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
atty = "0.2"

# Misc
build-info = "0.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0.92"

[dev-dependencies]
test-context = "0.1"
reqwest = "0.11"

[build-dependencies]
build-info-build = "0.0"
